fix(features): fix tablecell multiline truncate

--- a/src/features/cards/CardsTable/CardsTable.module.scss
+++ b/src/features/cards/CardsTable/CardsTable.module.scss
@@ -3,12 +3,21 @@
 
   .tableCellText {
     overflow: hidden;
+    display: -webkit-box;
 
     width: 100%;
-    max-width: 250px;
+    max-width: 200px;
     max-height: 100px;
 
+    font-size: 13px;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    word-break: break-word;
+
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+
+    &::first-letter {
+      text-transform: none;
+    }
   }
 }
